	  auto_sensor_event. (Dany)
	* Added command to AI's interface called 'EVENTSTATS', lists
	  the various events running on that AI. (Dany)
	* Changed the 'btech_engine' config directive to
	  'btech_explode_reactor'. (Greg Taylor)
	* There is now a config directive, 'btech_seismic_see_stopped',
	  that determines whether seismic picks up stopped units.
	  Default to off (0). (Power_Shaper)

	- Merge
	* Added Exile's mine trigger stuff which seperates the
	  Trigger mine and makes it more usable. (Dany)
	* Added Exile's emits (to MechDebugInfo) for picking up
	  and dropping off units. (Dany)
	* Added Exile's Waterproof_Tech but it works on all units
	  except for aeros, vtols and DSes.  Basicly negates any
	  rolls or affects that water has on a unit although
	  the units will still slow down in water. (Dany)
	* Added Coolant Guns. (Dany)
	* Added 'vector' command. (Power_Shaper)
	* Changed tacheight to tacsize. (Dany)

	- Bugfixes
	* Can no longer hide while OOD'ing (Greg Taylor)
	* Fixed btsetcharvalue() and btgetcharvalue() crashers.
	  (Martin Murray)
	* Some fixes for the mux to compile on Linux/amd64,
	  still a bunch of 32/64 bit issues. (Martin Murray)
	* Changed notify_check to notify_checked, was conflicting 
	  with a builtin function on Mac OS X. (Dany)
	* Fixes for embark and udisembark. (Dany)
	* Fixes to the configure system. (Dany)
	* btsetpartcost() corrected negative cost error check. (George Ponick)
	* btdamagemech() total damage limited to 1000 to prevent runaway loop. (George Ponick)
	* Fixed bttechlist() to prevent that FUSTAG bug. (Greg Taylor)
	* Fix for bug #1321731.  Masc code more in line with FASA
	  now and should destroy all the hips as well as
	  set the max speed to zero, fixing any weirdness
	  that was occuring when the unit took another leg crit. (Dany)
	* Fix for bug #1324084 - Stealth Armor.  Fix so when you
	  repair the armor on a stealth armor unit, it uses STH_Armor
	  parts instead of 'Internals' (which is wrong). (Dany)